# rustywind

./: .dockerignore  .gitignore  .travis.yml  100_RUN_FAILURE_ANALYSIS.md  100_run_results.txt  CHANGELOG.md  CNAME  COLOR_ORDERING_INVESTIGATION.md  COMBINED_AGENT_RESULTS.md  Cargo.toml  Dockerfile  FINAL_100RUN_RESULTS.md  FINAL_99.91_PERCENT_ACHIEVEMENT.md  FINAL_FIXES_99.72_PERCENT.md  FINAL_RESULTS.md  FINAL_RESULTS_CORRECTED.md  FINAL_RESULTS_SUMMARY.md  FUZZ_25RUN_FINAL_SUMMARY.md  FUZZ_25RUN_ROOT_CAUSE_ANALYSIS.md  FUZZ_REGRESSION_ANALYSIS.md  FUZZ_TEST_RESULTS.md  INVESTIGATION_REPORT_ROUNDED_CORNERS.md  INVESTIGATION_SUMMARY.md  LICENSE  MULTI_AGENT_FIXES_SUMMARY.md  PHASE_1_2_SUMMARY.md  PHASE_1_VALIDATION.md  PLAN.md  PROGRESS.md  PROPERTY_COUNT_TODO.md  QUICK_FIX_GUIDE.md  QUICK_WINS.md  README.MD  README.md  REGRESSION_FIX_SUMMARY.md  REMAINING_28_FAILURES_ANALYSIS.md  REMAINING_FAILURES_ANALYSIS.md  ROOT_CAUSE_FINAL_4_ISSUES.md  ROOT_CAUSE_SPACE_AND_ROUNDED.md  ROUNDED_CORNER_FIX_SUMMARY.md  (+37 more)
.github/workflows/: clippy.yml  docker.yml  mean_bean_ci.yml  mean_bean_deploy.yml  rustfmt.yml  tests.yml
ci/: before_deploy.ps1  before_deploy.sh  build.bash  script.sh
docs/planning/: README.md  css_verification.md  plan_context.md  plan_progress.md  prettier_analysis.md  static_list_plan.md
npm/: .gitignore  README.MD  README.md  package-lock.json  package.json  release.json
npm/lib/: constants.js  download-release.js  download.js  get.js  index.d.ts  index.js  install.js  postinstall.js  update-release.js
rustywind-cli/: Cargo.toml
rustywind-cli/src/: cli.rs  heard.rs  main.rs  options.rs  par.rs
rustywind-core/: CHANGELOG.md  Cargo.toml
rustywind-core/benches/: comprehensive_benchmarks.rs  sorter_benchmark.rs  sorting_benchmarks.rs
rustywind-core/src/: app.rs  bump_ext.rs  class_parser.rs  class_wrapping.rs  consts.rs  defaults.rs  hybrid_sorter.rs  lib.rs  parser.rs  pattern_sorter.rs  property_order.rs  sorter.rs  tailwind_prefix.rs  utility_map.rs  variant_order.rs
rustywind-core/src/parser/: css.rs  regex.rs
rustywind-core/tests/: check_coverage.rs  fuzz_regression_tests.rs  integration_tests.rs  test_alphanumeric_fixes.rs  test_background_color_ordering.rs  test_bg_opacity.rs  test_break_utility_ordering.rs  test_divide_ordering.rs  test_next_md_issues.rs  test_opacity_sorting.rs  test_outline_ordering.rs  test_ring_shadow_ordering.rs  test_rotation_ordering.rs  test_rounded_ordering.rs  test_size_sorting.rs  test_snap_utility_ordering.rs  test_spacing_gap_ordering.rs  test_spacing_utilities.rs  test_tailwind_prefix.rs  test_touch_utility_ordering.rs  test_transform_value_ordering.rs  test_utility_categories.rs  verify_basic_utilities.rs
rustywind-core/tests/fixtures/: README.md  VERIFICATION.md  count-css-classes.mjs  package.json  tailwind-v4.css
rustywind-vite/: Cargo.toml
rustywind-vite/src/: lib.rs  sorter.rs  tls.rs
src/: consts.rs  css.rs  defaults.rs  lib.rs  main.rs  options.rs  parser.rs  sorter.rs  tests.rs  tls.rs  utils.rs
src/options/: vite.rs
tailwind-sorting-test-files/: README.md  comparison-strategy.md  test-categories.md
tests/: TAILWIND_SORTING_RULES.md  rustywind.rs  rustywind_test.rs
tests/fixtures/: tailwind.css
tests/fuzz/: .gitignore  EDGE_CASE_FIX_RESULTS.md  FAILURE_TYPES.md  FINAL_ANALYSIS_99.20.md  INVESTIGATION_DROP_SHADOW.md  INVESTIGATION_OTHER.md  INVESTIGATION_ROUNDED_CORNERS.md  INVESTIGATION_SNAP.md  INVESTIGATION_SPACE_GAP.md  INVESTIGATION_SUMMARY.md  INVESTIGATION_TRUNCATE.md  NONE_QUICK_REFERENCE.md  NONE_SORTING_PATTERN.md  README.md  REMAINING_FAILURES.md  analyze-properties.mjs  capture-failures.js  categorize-failures.js  check-prettier.mjs  check_all_combos.mjs  collect-latest-failures.sh  collect-samples.sh  compare-properties.mjs  compare-real-world-patterns.js  compare.js  debug-sort.js  extract-failure-patterns.mjs  extract-real-world-patterns.mjs  extract-variant-order-runtime.mjs  failure-categories.json  fuzz-test-results.txt  legacy-classes.js  package-lock.json  package.json  run-baseline-test.sh  run-multiple-seeds.js  run-multiple.mjs  run_25_rounds.sh  tailwind-classes.js  test-after-variants.mjs  (+59 more)
tests/fuzz/docs/: FAILURE_ANALYSIS.md  FRACTION_FIX_REPORT.md  HOW_TAILWIND_SORTS.md  NEXT.md  README.md  REGRESSION_ANALYSIS.md  ROOT_CAUSE_SOLUTION.md  TAILWIND_SOURCE_ANALYSIS.md  UPGRADE_CHECKLIST.md
tests/fuzz/tools/: analyze-failures.js  analyze-failures.py  analyze_failures.py  collect_failures.py  test_many_rounds.py
tests/real-world-tests/: compare-tools.js  sources.md
tests/tailwind-sorting-test-files/: .gitignore  COMPARISON_RESULTS_SUMMARY.md  README.md  analyze-class-diffs.js
tests/tailwind_example/: package-lock.json  package.json  tailwind.css
xtask/: Cargo.toml  README.md
xtask/src/: commands.rs  main.rs
xtask/src/commands/: mod.rs  npm.rs  run.rs  setup.rs
xtask/src/utils/: categories.rs  mod.rs  parser.rs
