[workspace]
members = ["rustywind-cli", "rustywind-core", "rustywind-vite"]
default-members = ["rustywind-cli"]
resolver = "2"

[workspace.package]
authors = ["Praveen Perera <praveen@avencera.com>"]
version = "0.21.1"
edition = "2021"
license = "Apache-2.0"
homepage = "https://github.com/avencera/rustywind"
repository = "https://github.com/avencera/rustywind"

[workspace.dependencies]
once_cell = "1.18"
regex = "1.9"
itertools = "0.12"
# Faster HashMap
ahash = "0.8"
# Errors
eyre = "0.6"
color-eyre = "0.6"
# Logging
env_logger = "0.11"
log = "0.4"
# TLS
rustls = { version = "0.22" }
# HTTP
ureq = "2.9"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
strip = true
