[package]
name = "rustywind"
description = "A CLI to sort tailwind CSS classes"
documentation = "https://docs.rs/rustywind"
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"

[dependencies]
rustywind_core = { path = "../rustywind-core" }
rustywind_vite = { path = "../rustywind-vite" }

itertools = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
ahash = { workspace = true }
eyre = { workspace = true }
color-eyre = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }

# CLI
clap = { version = "4.3", features = ["cargo", "derive", "unstable-styles"] }
indoc = "2.0"
colored = "2.1"
# Parallel
rayon = "1.5"
# Files
ignore = "0.4"
# JSON parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anstyle = "1.0.1"
