[package]
name = "rustywind_core"
version = "0.3.0"
description = "A library for sorting tailwind CSS classes"
documentation = "https://docs.rs/rustywind_core"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
once_cell = { workspace = true }
regex = { workspace = true }
ahash = { workspace = true }
eyre = { workspace = true }

# parsing
aho-corasick = "1.0"
winnow = { version = "0.7", features = ["simd"] }

[dev-dependencies]
pretty_assertions = "1.4"
test-case = "3.3.1"
