[package]
name = "rustywind_core"
version = "0.4.0-rc.1"
description = "A library for sorting tailwind CSS classes"
documentation = "https://docs.rs/rustywind_core"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
once_cell = { workspace = true }
quick_cache = { workspace = true }
compact_str = { workspace = true }
regex = { workspace = true }
ahash = { workspace = true }
eyre = { workspace = true }

# parsing
aho-corasick = "1.0"
winnow = { version = "1.0", features = ["simd"] }

[dev-dependencies]
pretty_assertions = "1.4"
test-case = "3.3.1"
criterion = { version = "0.5", features = ["html_reports"] }

[target.'cfg(not(target_env = "msvc"))'.dev-dependencies]
tikv-jemallocator = "0.6"

[[bench]]
name = "sorting_benchmarks"
harness = false

[[bench]]
name = "comprehensive_benchmarks"
harness = false

[[bench]]
name = "sorter_benchmark"
harness = false
