[package]
name = "rustywind_vite"
version = "0.3.0"
description = "Additional functionality for rustywind_core specific to Vite"
documentation = "https://docs.rs/rustywind_vite"
authors.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
# rustywind_core = { path = "../rustywind-core" }
rustywind_core = { version = "0.3.0" }

# tls
rustls = { version = "0.23", features = ["ring"], default-features = false }

# HTTP
ureq = "3.0"

once_cell = { workspace = true }
regex = { workspace = true }
eyre = { workspace = true }
color-eyre = { workspace = true }
